fix: broken styles in program cert print media
Right now, building static assets is broken for credentials and credentials themes. This PR fixes an issues in the print media query that was blocking the build.

--- a/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
@@ -35,7 +35,8 @@
           .accomplishment-title {
             @include make-col-ready();
             @include make-col(8);
-            @extend %mt-2, %mb-0;
+            margin: 0;
+            margin-bottom: $spacer * 1.5;
             display: inline-block;
             vertical-align: middle;
           }
@@ -85,11 +86,11 @@
         }
 
         .signatory {
-          @extend %m-0, %mb-2;
+          margin: 0;
+          margin-bottom: $spacer * .5;
           width: 100%;
-
           &:last-child {
-            @extend %mb-0;
+            margin-bottom: 0;
           }
         }
       }
@@ -145,11 +146,11 @@
   .wrapper-accomplishment-statement {
 
     .accomplishment-recipient {
-      @extend %h2;
+      @include h2;
     }
 
     .accomplishment-course, .accomplishment-program {
-      @extend %h3;
+      @include h3;
     }
 
     .copy {
@@ -163,7 +164,8 @@
     .accomplishment-program,
     .accomplishment-summary,
     .accomplishment-statement-detail {
-      @extend %m-0, %mb-4;
+      margin: 0;
+      margin-bottom: $spacer * 1.5;
     }
   }
 
